# low-rank-rnn

./: .gitignore  README.md  pyproject.toml  run_tests.py  setup.py
lowrank_rnn/: __init__.py
lowrank_rnn/data/: __init__.py  ou.py
lowrank_rnn/models/: __init__.py  low_rank.py  rnn.py
lowrank_rnn/train/: trainer.py
notes/: training.tex
scripts/: train_ou_tracking.py  visualize_training.py
tests/: test_low_rank.py  test_ou.py  test_rnn.py
